--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/parmeshword/myFirstReactProject/issues"
   },
-  "homepage": "https://github.com/parmeshword/myFirstReactProject#readme"
+  "homepage": "https://github.com/parmeshword/myFirstReactProject#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  }
 }
